  the generator count.
  (#145, reported by Todd Wilson @lambdacalculator)
* Apply with unknowns now requires each computed subgoal to fully instantiate
  logic variables. ***SOUNDNESS BUG***
  (#146, reported by @Chen-PL, @jiangsy)
* Apply with unknowns now undoes variable instantiations on failed search
  for generated logic variables. ***SOUNDNESS BUG***
  (related to #146)
* Declared constants must not have types containing `prop` as descendants of
  argument types. ***SOUNDNESS BUG***
  (#147, discovered by Sebastiaan Joosten, reported by Gopalan Nadathur)


Changes in 2.0.7
------------------

This release adds no functionality, but fixes a number of minor bugs. It also
makes Abella compilable with OCaml versions 4.08.0 and higher.


Bugfixes

* Import statements with file paths containing . no longer break
  the HTML exporter
* Quote filenames when making shell calls  
  (#115, reported by @JimmyZJX)
* Asserting trivial facts incorrectly left variables instantiated  
  (#113, reported by Jinxu Zhao)
* Fully check that types are well-formed  
  (#128, reported by @RandomActsOfGrammar)
* Case for async object sequents should normalize before clause selection  
  (#129, reported by Guillaume Melquiond)
* Monotone for backchaining sequents should preserve backchaining  
  (Related to #129, formally justified by conjunct 2 of logic/hh_meta.thm)


Changes in 2.0.6 from 2.0.5
---------------------------

Additions

* The schematic polymorphism branch has been merged.

  You can read more about it here:

     http://abella-prover.org/schm-poly/index.html

  Thanks to Yuting Wang and Gopalan Nadathur for developing the theory
  to match the implementation by Yuting.


Tweaks to existing functionality

* Polymorphic definitions and theorems in the style of version 2.0.5
  are now recast in the style of schematic polymorphism in 2.0.6.
  There should be minimal user-visible impact.


Bugfixes

* Confusing nominal and other constants in eta-contraction